idea/testData/multiplatform/differentKindsOfDependencies/a-common/a.kt
expect class <!LINE_MARKER("descr='Has actuals in JS, JVM'")!>A<!>